Fix clear search icon cropping

--- a/app/components/target-search/target-search.styl
+++ b/app/components/target-search/target-search.styl
@@ -52,9 +52,9 @@
       right 0
       top 0
       bottom 0
-      padding-left 1em
+      padding-left .75em
       width 2.5em
-      padding-right 1em
+      padding-right .75em
       cursor pointer
       transition opacity .15s ease
       opacity 0
@@ -66,9 +66,9 @@
       .icon
         position absolute
         pointer-events none
-        height .75em
-        width .75em
-        right 1em
+        height 1em
+        width 1em
+        right .85em
         top 0
         bottom 0
         margin-top auto
